# advent-2024

./: .gitignore  CHANGELOG.md  advent2024.cabal  aocdata
app/: Main.hs
src/: Advent.hs  Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  DayX.hs
