cabal-version:      3.4
name:               advent2024
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Matthew Farrell
maintainer:         farrellm@alum.mit.edu
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Advent
                    , Day1
                    , Day2
                    , Day3
                    , Day4
                    , Day5
                    , Day6
                    , Day7
    -- other-modules:
    other-extensions: LexicalNegation
    build-depends:    base 
                    , containers
                    , megaparsec
                    , optics
                    , optics-extra
                    , parser-combinators
                    , relude
                    , text
                    , unordered-containers
                    , vector
                    , vector-th-unbox
                    , hashtables
                    , vector-hashtables
    mixins:   base hiding (Prelude)
            , relude (Relude as Prelude)
            , relude
    hs-source-dirs:   src
    default-language: GHC2024

executable advent2024
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , advent2024
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options: -rtsopts

test-suite advent2024-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:   base 
                   , advent2024
